--- a/index.html
+++ b/index.html
@@ -1,16 +1,46 @@
+<!DOCTYPE html>
 <html>
     <head>
     <script src="script.js"></script>
     <link rel="stylesheet" href="style.css">
+    <title>Manali's Simple Interest Calculator</title>
     </head>
     <body>
-        <h1>Simple Interest Calculator</h1>
+        <div class="maindiv">
+            <h1>Simple Interest Calculator</h1>
+				<table>
+					<tr><td><label for="principal">Amount :</label></td>
+					<td><input type="number"  id="principal">  <br><br></td></tr>
 
-        Amount <input type="number"  id="principal">  <br/>
-        Rate <input type="number"  id="rate">  <br/>
-        No. of Years <input type="number"  id="years">  <br/>
-        Interest : <span id="result"></span><br>
-
-        <button onclick="compute()">Compute</button>
+					<tr><td><label for="rate">Rate :</label></td>
+					<td><input type="range" id="rate" min="1" max="20" step="0.25" value="10.25" onchange="updateRate()">
+					
+					<span id="rate_val">10.25%</span>
+					<br><br></td></tr>
+					
+					<tr><td><label for="years">No. of Years :</label></td>
+					<td><select id="years">
+						<option value="1">1</option>
+						<option value="2">2</option>
+						<option value="3">3</option>
+						<option value="4">4</option>
+						<option value="5">5</option>
+						<option value="6">6</option>
+						<option value="7">7</option>
+						<option value="8">8</option>
+						<option value="9">9</option>
+						<option value="10">10</option>
+					</select>
+					</td></tr>
+                </table>
+				<br>
+                <button type="submit" onclick="checkprincipal()">Compute Interest</button>
+                <br><br>
+			<span id="result" class="output"></span>
+			<br>
+			<footer >
+				&#169; This Calculator belongs to Manali    
+			</footer>
+        </div>    
     </body>
 </html>
