modified to improve the look

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 			<span id="result" class="output"></span>
 			<br>
 			<footer >
-				&#169; This Calculator belongs to Manali    
+				&#169; Everyone Can Get Rich    
 			</footer>
         </div>    
     </body>
